--- a/mandelbulber2/qt/preferences_dialog.ui
+++ b/mandelbulber2/qt/preferences_dialog.ui
@@ -682,8 +682,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>600</width>
-            <height>672</height>
+            <width>582</width>
+            <height>750</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_image">
@@ -863,6 +863,91 @@
                  </widget>
                 </item>
                </layout>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item>
+            <widget class="QGroupBox" name="groupBox_3">
+             <property name="title">
+              <string>Z-buffer options</string>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_6">
+              <property name="leftMargin">
+               <number>2</number>
+              </property>
+              <property name="topMargin">
+               <number>2</number>
+              </property>
+              <property name="rightMargin">
+               <number>2</number>
+              </property>
+              <property name="bottomMargin">
+               <number>2</number>
+              </property>
+              <property name="spacing">
+               <number>2</number>
+              </property>
+              <item row="0" column="0">
+               <widget class="MyCheckBox" name="checkBox_zbuffer_invert">
+                <property name="text">
+                 <string>Invert z-buffer</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="MyCheckBox" name="checkBox_zbuffer_logarithmic">
+                <property name="text">
+                 <string>Logarithmic scale</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="MyGroupBox" name="groupCheck_zbuffer_constant_range">
+                <property name="title">
+                 <string>Use contant depth range</string>
+                </property>
+                <property name="checkable">
+                 <bool>true</bool>
+                </property>
+                <layout class="QGridLayout" name="gridLayout_7">
+                 <property name="leftMargin">
+                  <number>2</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>2</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>2</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>2</number>
+                 </property>
+                 <property name="spacing">
+                  <number>2</number>
+                 </property>
+                 <item row="1" column="0">
+                  <widget class="QLabel" name="label_2">
+                   <property name="text">
+                    <string>maximum z-depth</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label_3">
+                   <property name="text">
+                    <string>minimum z-depth</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="1">
+                  <widget class="MyLineEdit" name="logedit_zbuffer_min_depth"/>
+                 </item>
+                 <item row="1" column="1">
+                  <widget class="MyLineEdit" name="logedit_zbuffer_max_depth"/>
+                 </item>
+                </layout>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -1266,8 +1351,8 @@ and will only be present after enabling and re-render.</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>582</width>
-            <height>833</height>
+            <width>251</width>
+            <height>917</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_OpenCL">
