Code from custom formula editor now is compiled and run with rendering kernel.

--- a/mandelbulber2/qt/custom_formula_editor.ui
+++ b/mandelbulber2/qt/custom_formula_editor.ui
@@ -104,7 +104,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QTextEdit" name="textEdit_code"/>
+    <widget class="QTextEdit" name="textEdit_formula_code"/>
    </item>
   </layout>
  </widget>
