--- a/mandelbulber2/formula/ui/amazing_surf_mod4.ui
+++ b/mandelbulber2/formula/ui/amazing_surf_mod4.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>916</width>
-    <height>2580</height>
+    <height>2636</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -480,7 +480,7 @@ offset:</string>
      <item row="1" column="0">
       <widget class="QLabel" name="label_106">
        <property name="text">
-        <string>Fo&amp;ld y:</string>
+        <string>Fold y:</string>
        </property>
        <property name="buddy">
         <cstring>spinbox3_transf_addition_constant_111_y</cstring>
@@ -1857,14 +1857,14 @@ offset:</string>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MySpinBox</class>
    <extends>QSpinBox</extends>
    <header>my_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
