Added saving/loading formula code to/from .fract file. Code is compressed and encoded as base64.

--- a/mandelbulber2/qt/custom_formula_editor.ui
+++ b/mandelbulber2/qt/custom_formula_editor.ui
@@ -104,7 +104,11 @@
     </layout>
    </item>
    <item>
-    <widget class="QTextEdit" name="textEdit_formula_code"/>
+    <widget class="QTextEdit" name="textEdit_formula_code">
+     <property name="tabStopWidth">
+      <number>20</number>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
